# web-rs

./: Cargo.toml  README.md
short-url/: Cargo.toml
short-url/src/: config.rs  handler.rs  main.rs  model.rs  view.rs
short-url/src/config/: service.rs  short_url.rs
short-url/src/handler/: core.rs  result.rs
short-url/src/model/: url.rs
util/: Cargo.toml
util/src/: error.rs
