[package]
name = "short-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.18"
axum_static = "1.2.1"
config = "0.13.3"
dotenvy = "0.15.7"
futures = "0.3.28"
highhash = "0.2.0"
serde = "1.0.163"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
util = { path = "../util" }
