[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.18"
chrono = "0.4.24"
config = "0.13.3"
redis = { version = "0.23.0", features = ["aio", "tokio-comp"] }
serde = "1.0.163"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono"] }
thiserror = "1.0.40"
